# $Id$

SUBDIRS = src doc m4

#MAINTAINERCLEANFILES = aclocal.m4 Makefile.in \
#   config.cache config.guess config.log config.status \
#   config.sub configure depcomp install-sh ltmain.sh \
#   make.log missing mkinstalldirs

MAINTAINERCLEANFILES = aclocal.m4 Makefile.in \
   config.cache config.guess config.log \
   config.sub configure depcomp install-sh ltmain.sh \
   make.log missing mkinstalldirs

#bin_PROGRAMS=openmsx
#openmsx_SOURCES=openmsx.cc openmsx.1 system.h aclocal.m4

EXTRA_DIST=openmsx.lsm.in GPL #NAME.texinfo openmsx.spec.in

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

