# $Id$
#  install the man pages
man_MANS=openmsx.1
pkgdata_DATA = \
	commands.txt \
	developersFAQ.txt \
	openmsx.tex \
	testcases.txt \
	vram-addressing.txt \
	openMSX-HOWTO.txt \
	after-bussum-FAQ.txt \
	exampleconfigs.xml

EXTRA_DIST = $(man_MANS) $(pkgdata_DATA)

MAINTAINERCLEANFILES = Makefile.in
